Revert "moved page into new ILoveYouKarli directory"
This reverts commit a28a63b79839fd88cb1368a0c1154a7f1314c489.

--- a/Karli+Luke.html
+++ b/Karli+Luke.html
@@ -5,64 +5,48 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Valentine's 3x3 Puzzle ❤️</title>
 <style>
-  /* === Page Styling === */
   body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #FFF4E1; /* soft cream */
+    background: #ffe6f0;
     height: 100vh;
     margin: 0;
   }
-
   h1 {
-    color: #6A2C2C; /* deep red/brown */
+    color: #d62869;
     text-align: center;
-    margin-bottom: 20px;
   }
-
-  /* === Puzzle Grid === */
   #puzzle {
     display: grid;
     grid-template-columns: repeat(3, 200px);
-    grid-template-rows: repeat(3, 150px); /* 4:3 aspect ratio */
+    grid-template-rows: repeat(3, 150px); /* keep 4:3 ratio */
     gap: 2px;
+    margin-top: 20px;
   }
-
-  /* === Puzzle Pieces === */
   .piece {
     width: 200px;
     height: 150px;
     background-image: url('photo.png'); /* replace with your photo */
-    background-size: 600px 450px; /* scaled display */
-    border: 2px solid #B33A3A; /* deep red */
+    background-size: 600px 450px;
+    border: 2px solid #d62869;
     box-sizing: border-box;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     user-select: none;
-    transition: transform 0.2s ease; /* subtle hover effect */
   }
-
-  .piece:hover {
-    transform: scale(1.05);
-    border-color: #E07A5F; /* warm coral hover */
-  }
-
-  /* === Empty Slot === */
   .empty {
     background: none;
-    border: 2px dashed #D9A066; /* warm gold */
+    border: 2px dashed #d62869;
   }
-
-  /* === Message === */
   #message {
     margin-top: 20px;
     font-size: 1.5em;
-    color: #B33A3A; /* matches piece border */
+    color: #d62869;
     display: none;
     text-align: center;
   }
@@ -70,9 +54,9 @@
 </head>
 <body>
 
-<h1>You're the Missing Piece</h1>
+<h1>Piece by Piece, We Complete Each Other</h1>
 <div id="puzzle"></div>
-<div id="message">Super secret clue</div>
+<div id="message">Some super secret clue!</div>
 
 <script>
 const rows = 3;
@@ -85,10 +69,10 @@ let grid = [];
 for (let i = 0; i < rows * cols - 1; i++) {
     grid.push(i);
 }
-grid.push(null); // empty slot
+grid.push(null); // empty space
 shuffleGrid();
 
-// Render puzzle
+// Render pieces
 function render() {
     puzzle.innerHTML = '';
     for (let i = 0; i < rows * cols; i++) {
@@ -105,7 +89,7 @@ function render() {
     }
 }
 
-// Shuffle the grid (solvable)
+// Shuffle the grid (simple, solvable)
 function shuffleGrid() {
     do {
         grid = grid.filter(v => v !== null).sort(() => Math.random() - 0.5);
@@ -122,6 +106,7 @@ function isSolvable(arr) {
             if (nums[i] > nums[j]) inversions++;
         }
     }
+    // 3x3 grid: solvable if inversions even
     return inversions % 2 === 0;
 }
 
