secret msg change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valentine's 3x3 Puzzle ❤️</title>
+<title>Happy Valentine's Day Karli! ❤️</title>
 <style>
   body {
     font-family: sans-serif;
@@ -56,7 +56,13 @@
 
 <h1>Piece by Piece, We Complete Each Other</h1>
 <div id="puzzle"></div>
-<div id="message">Some super secret clue!</div>
+<div id="message">
+    The key to my heart, 
+    you shall receive,
+    The key to my heart is yours tonight, 
+    After one hug that feels so right.
+</div>
+
 
 <script>
 const rows = 3;
