--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #FFF4E1; /* soft cream */
+    background: #ffe6f0; /* soft cream */
     height: 100vh;
     margin: 0;
   }
